# battlesnake-engine-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run_snake_random.sh  simplewebserver.cmake  test_snake_random.sh  wrapped_hazard_generator.py
cli/: CMakeLists.txt  cli_options.cpp  cli_options.h  cli_play.cpp  cli_play.h  http_client_battlesnake.cpp  http_client_battlesnake.h  main.cpp
gamedownloader/: CMakeLists.txt  README.md  main.cpp  options.cpp  options.h  simplewebsocketserver.cmake
include/: ruleset.h  ruleset_errors.h  standard_ruleset.h
include/battlesnake/engine/: standard_ruleset.h
include/battlesnake/interface/: battlesnake.h
include/battlesnake/json/: converter.h
include/battlesnake/player/: game_player.h
include/battlesnake/rules/: constrictor_ruleset.h  data_types.h  errors.h  helpers.h  royale_ruleset.h  ruleset.h  ruleset_errors.h  solo_ruleset.h  squad_ruleset.h  standard_ruleset.h  wrapped_ruleset.h
include/battlesnake/server/: server.h
interface/: CMakeLists.txt  interface.cpp
json/: CMakeLists.txt  converter.cpp
player/: CMakeLists.txt  game_player.cpp
rules/: CMakeLists.txt  constrictor_ruleset.cpp  data_types.cpp  helpers.cpp  royale_ruleset.cpp  ruleset.cpp  solo_ruleset.cpp  squad_ruleset.cpp  standard_ruleset.cpp  wrapped_ruleset.cpp
server/: CMakeLists.txt  server.cpp
snakes/: CMakeLists.txt
snakes/random/: CMakeLists.txt  README.md  main.cpp  snake_random.cpp  snake_random.h  snake_random_test.cpp
snakes/random/testdata/: test001.json
src/: ruleset.cpp  standard_ruleset.cpp
test/: CMakeLists.txt  main.cpp  standard_ruleset_test.cpp
test/json/: CMakeLists.txt  converter_test.cpp  create_json_test.cpp  parse_json_test.cpp
test/rules/: CMakeLists.txt  constrictor_ruleset_test.cpp  data_types_test.cpp  royale_ruleset_perftest.cpp  royale_ruleset_test.cpp  solo_ruleset_test.cpp  squad_ruleset_test.cpp  standard_ruleset_perftest.cpp  standard_ruleset_test.cpp  wrapped_ruleset_test.cpp
test/server/: CMakeLists.txt  server_test.cpp
